5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1795_3134.log
== TEST (2019-05-30 16:35:30) 
-- CODE:
from numpy import*
vetor = array(eval(input("numeros: ")))
i = 0 
n = 0
soma = 0
while(i<size(vetor)):
	m = vetor[n]
	v = m**2
	soma = soma + v
	resultado = ((soma*2)/n)**1/2
	i = i + 1
	n = n +1
	soma = soma + 1
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:35:37) 
-- CODE:
from numpy import*
vetor = array(eval(input("numeros: ")))
i = 0 
n = 0
soma = 0
while(i<size(vetor)):
	m = vetor[n]
	v = m**2
	soma = soma + v
	resultado = ((soma*2)/n)**1/2
	i = i + 1
	n = n +1
	soma = soma + 1
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:30) 
-- CODE:
from numpy import*
vetor = array(eval(input("numeros: ")))
i = 0 
n = 3
soma = 0
while(i<size(vetor)):
	m = vetor[i]
	v = m**2
	soma = soma + v
	resultado = ((soma*2)/n)**1/2
	i = i + 1
	n = n +1
	soma = soma + 1
print(round(resultado, 2)
-- ERROR:
File "XXXX", line 15
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:35) 
-- CODE:
from numpy import*
vetor = array(eval(input("numeros: ")))
i = 0 
n = 3
soma = 0
while(i<size(vetor)):
	m = vetor[i]
	v = m**2
	soma = soma + v
	resultado = ((soma*2)/n)**1/2
	i = i + 1
	n = n +1
	soma = soma + 1
print(round(resultado, 2)
-- ERROR:
File "XXXX", line 15
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:45) 
-- CODE:
from numpy import*
vetor = array(eval(input("numeros: ")))
i = 0 
n = 3
soma = 0
while(i<size(vetor)):
	m = vetor[i]
	v = m**2
	soma = soma + v
	resultado = ((soma*2)/n)**1/2
	i = i + 1
	n = n +1
	soma = soma + 1
print(round(resultado, 2)
-- ERROR:
File "XXXX", line 15
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:36:59) 
-- CODE:
from numpy import*
vetor = array(eval(input("numeros: ")))
i = 0 
n = 3
soma = 0
while(i<size(vetor)):
	m = vetor[i]
	v = m**2
	soma = soma + v
	resultado = ((soma*2)/n)**1/2
	i = i + 1
	n = n +1
	soma = soma + 1
print(round(resultado, 2)
-- ERROR:
File "XXXX", line 15
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:15) 
-- CODE:
from numpy import*
vetor = array(eval(input("numeros: ")))
i = 0 
n = 3
soma = 0
while(i<size(vetor)):
	m = vetor[i]
	v = m**2
	soma = soma + v
	resultado = ((soma*2)/n)**1/2
	i = i + 1
	n = n +1
	soma = soma + 1
print(round(resultado, n)
-- ERROR:
File "XXXX", line 15
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:48) 
-- CODE:
from numpy import*
vetor = array(eval(input("numeros: ")))
i = 0 
n = 3
soma = 0
while(i<size(vetor)):
	m = vetor[i]
	v = m**2
	soma = soma + v
	resultado = ((soma*2)/n)**1/2
	i = i + 1
	n = n +1
	soma = soma + 1
print(round(resultado, n)
-- ERROR:
File "XXXX", line 15
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
